Table users {
  id int [pk]
  name varchar
  email varchar
  role varchar
  created_at datetime
}

Table schemas {
  id int [pk]
  name varchar
  current_version int [ref: > schema_versions.version_id]
  uploaded_by int [ref: > users.id]
  created_at datetime
}

Table schema_versions {
  version_id int [pk]
  schema_id int [ref: > schemas.id]
  version_number int
  file_path varchar
  diff_summary text
  created_at datetime
}

Table notifications {
  id int [pk]
  schema_id int [ref: > schemas.id]
  event_type varchar
  payload json
  sent_at datetime
}
